--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ dublin_bus/dublin_bus/__pycache__/*
 dublin_bus/dbus/migrations/__pycache__/*
 dublin_bus/dbus/__pycache__/*
 dublin_bus/dublin_bus/__pycache__/*
+dublin_bus/dublin_bus/__pycache__/*
